@@ -74,7 +74,7 @@ static void* _vfzMap(struct VFile* vf, size_t size, int flags);
 static void _vfzUnmap(struct VFile* vf, void* memory, size_t size);
 static void _vfzTruncate(struct VFile* vf, size_t size);
 static ssize_t _vfzSize(struct VFile* vf);
-static bool _vfzSync(struct VFile* vf, const void* buffer, size_t size);
+static bool _vfzSync(struct VFile* vf, void* buffer, size_t size);
 
 static bool _vdzClose(struct VDir* vd);
 static void _vdzRewind(struct VDir* vd);
@@ -426,7 +426,7 @@ bool _vdzDeleteFile(struct VDir* vd, const char* path) {
 	return false;
 }
 
-bool _vfzSync(struct VFile* vf, const void* memory, size_t size) {
+bool _vfzSync(struct VFile* vf, void* memory, size_t size) {
 	UNUSED(vf);
 	UNUSED(memory);
 	UNUSED(size);
@@ -654,7 +654,7 @@ bool _vdzDeleteFile(struct VDir* vd, const char* path) {
 	return false;
 }
 
-bool _vfzSync(struct VFile* vf, const void* memory, size_t size) {
+bool _vfzSync(struct VFile* vf, void* memory, size_t size) {
 	UNUSED(vf);
 	UNUSED(memory);
 	UNUSED(size);
